--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.8.4",
     "axios": "^1.6.2",
     "crypto-js": "^4.2.0",
+    "friendly-challenge": "^0.9.14",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "13.4.1",
