--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,7 +16,8 @@
     "react-native-svg": "14.1.0",
     "react-native-svg-transformer": "1.2.0",
     "react-native-web": "~0.19.9",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "twrnc": "^4.0.0"
   },
   "devDependencies": {
     "@config-plugins/detox": "~6.0.0",
