--- a/apps/customer-mobile/package.json
+++ b/apps/customer-mobile/package.json
@@ -4,22 +4,35 @@
   "private": true,
   "main": "index.js",
   "dependencies": {
-    "@expo/webpack-config": "^0.17.0",
-    "dns.js": "^1.0.1",
-    "expo": "~46.0.19",
-    "expo-dev-client": "~1.3.1",
-    "expo-image-loader": "~3.2.0",
-    "expo-linking": "~3.2.4",
-    "expo-splash-screen": "~0.16.2",
-    "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.7",
-    "nativewind": "2.0.9",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.9", 
-    "react-native-screens": "~3.15.0", 
-    "react-native-web": "~0.18.7",
-    "react-scripts": "^5.0.1"
+    "nativewind": "*",
+    "tailwindcss": "^3.3.2",
+    "typescript": "*",
+    "react": "*",
+    "react-native": "*",
+    "expo": "*",
+    "@babel/core": "*",
+    "@types/react": "*",
+    "react-hook-form": "*",
+    "@fortawesome/react-fontawesome": "*",
+    "crypto-js": "*",
+    "@tanstack/react-query": "*",
+    "js-cookie": "*",
+    "friendly-challenge": "*",
+    "csstype": "*",
+    "@fortawesome/free-solid-svg-icons": "*",
+    "@fortawesome/free-brands-svg-icons": "*",
+    "@fortawesome/free-regular-svg-icons": "*",
+    "@fortawesome/fontawesome-svg-core": "*",
+    "@tanstack/react-query-devtools": "*",
+    "@microsoft/signalr": "*",
+    "axios": "*",
+    "axios-mock-adapter": "*",
+    "zod": "*",
+    "lodash": "*",
+    "next": "*",
+    "sonner": "*",
+    "quill": "*",
+    "@nx/react": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
