--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@microsoft/signalr": "^8.0.0",
     "@nrwl/next": "^17.1.2",
     "@nx/expo": "^17.2.8",
+    "@react-native/assets-registry": "^0.74.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/stack": "^6.3.20",
     "@tanstack/react-query": "^5.8.4",
@@ -42,6 +43,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-native-gesture-handler": "^2.14.1",
+    "react-native-reanimated": "^3.7.0",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
     "react-navigation": "^5.0.0",
@@ -59,7 +61,8 @@
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
-    "@expo/metro-config": "0.3.10",
+    "@config-plugins/detox": "~6.0.0",
+    "@expo/metro-config": "~0.10.7",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@nx/cypress": "17.1.2",
     "@nx/detox": "17.2.8",
@@ -111,19 +114,15 @@
     "jest-circus": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-react-native": "18.0.0",
-    "metro": "0.76.8",
-    "metro-babel-register": "0.76.8",
-    "metro-config": "0.76.8",
-    "metro-react-native-babel-preset": "0.76.8",
-    "metro-react-native-babel-transformer": "0.76.8",
-    "metro-resolver": "0.76.8",
+    "metro": "0.76.7",
+    "metro-resolver": "0.76.7",
     "nx": "17.1.2",
     "postcss": "^8.4.31",
     "prettier": "^2.6.2",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "1.0.0",
     "sass": "^1.69.5",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.3.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2"
