--- a/apps/customer-mobile/package.json
+++ b/apps/customer-mobile/package.json
@@ -11,7 +11,8 @@
     "react-native-svg": "*",
     "react-native-web": "*",
     "react-native-screens": "*",
-    "react-native-safe-area-context": "*"
+    "react-native-safe-area-context": "*",
+    "sass": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && node tools/scripts/eas-build-pre-install.mjs . apps/customer-mobile && cp package-lock.json apps/customer-mobile",
