--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo/metro-config": "~0.17.3",
     "@expo/metro-runtime": "~3.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -12,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@microsoft/signalr": "^8.0.0",
     "@nx/next": "^18.0.4",
     "@react-navigation/native": "^6.1.10",
@@ -38,7 +40,7 @@
     "react-native": "0.73.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
+    "react-native-svg": "^14.1.0",
     "react-native-svg-transformer": "1.2.0",
     "react-native-web": "~0.19.9",
     "react-redux": "^8.1.3",
@@ -46,7 +48,6 @@
     "socket.io-client": "^4.7.3",
     "sonner": "^1.2.2",
     "tslib": "^2.3.0",
-    "twrnc": "^4.0.0",
     "utf-8-validate": "^5.0.10",
     "uuid": "^9.0.1",
     "ws": "^8.16.0",
