--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "uuid": "^9.0.1",
     "ws": "^8.16.0",
     "yup": "^1.3.2",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "expo-linear-gradient": "~12.3.0"
   },
   "devDependencies": {
     "@config-plugins/detox": "~6.0.0",
