ADD/ Categories List

--- a/apps/customer-mobile/package.json
+++ b/apps/customer-mobile/package.json
@@ -40,7 +40,8 @@
     "@fortawesome/free-regular-svg-icons": "*",
     "next": "*",
     "react-native-linear-gradient": "*",
-    "expo-secure-store": "*"
+    "expo-secure-store": "*",
+    "expo-linear-gradient": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && node tools/scripts/eas-build-pre-install.mjs . apps/customer-mobile && cp package-lock.json apps/customer-mobile",
