--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "crypto-js": "^4.2.0",
     "encoding": "^0.1.13",
     "expo": "49.0.16",
+    "expo-linear-gradient": "~12.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "friendly-challenge": "^0.9.14",
@@ -35,9 +36,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
+    "react-native-element-dropdown": "^2.10.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^13.9.0",
+    "react-native-svg": "^13.14.0",
     "react-native-svg-transformer": "1.0.0",
     "react-native-web": "~0.19.9",
     "sass-loader": "^14.1.0",
@@ -49,8 +51,7 @@
     "uuid": "^9.0.1",
     "ws": "^8.16.0",
     "yup": "^1.3.2",
-    "zod": "^3.22.4",
-    "expo-linear-gradient": "~12.3.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@config-plugins/detox": "~6.0.0",
@@ -101,7 +102,7 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-expo": "~49.0.0",
     "metro": "0.76.8",
-    "metro-resolver": "0.76.8",
+    "metro-resolver": "^0.76.8",
     "nx": "17.2.8",
     "postcss": "^8.4.35",
     "prettier": "^2.6.2",
