--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-native": "^0.72.10",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
