--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/lodash": "^4.14.202",
     "@types/node": "18.16.9",
     "@types/react": "^18.2.57",
+    "@types/react-native-dotenv": "^0.2.2",
     "@types/socket.io-client": "^3.0.0",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
@@ -95,6 +96,7 @@
     "nx": "17.2.8",
     "postcss": "^8.4.35",
     "prettier": "^2.6.2",
+    "react-native-dotenv": "^3.4.10",
     "react-test-renderer": "18.2.0",
     "sass": "^1.69.5",
     "tailwindcss": "^3.4.1",
