Design and style for bottom tab navigator

--- a/apps/customer-mobile/package.json
+++ b/apps/customer-mobile/package.json
@@ -41,7 +41,8 @@
     "next": "*",
     "react-native-linear-gradient": "*",
     "expo-secure-store": "*",
-    "expo-linear-gradient": "*"
+    "expo-linear-gradient": "*",
+    "@react-navigation/bottom-tabs": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && node tools/scripts/eas-build-pre-install.mjs . apps/customer-mobile && cp package-lock.json apps/customer-mobile",
