--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-native": "^0.72.10",
+    "react-native-element-dropdown": "^2.10.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.9.0",
