--- a/apps/customer-mobile/package.json
+++ b/apps/customer-mobile/package.json
@@ -41,7 +41,9 @@
     "next": "*",
     "react-native-linear-gradient": "*",
     "expo-secure-store": "*",
-    "expo-linear-gradient": "*"
+    "expo-linear-gradient": "*",
+    "uuid": "*",
+    "yup": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && node tools/scripts/eas-build-pre-install.mjs . apps/customer-mobile && cp package-lock.json apps/customer-mobile",
