--- a/apps/customer-mobile/package.json
+++ b/apps/customer-mobile/package.json
@@ -42,7 +42,9 @@
     "react-native-linear-gradient": "*",
     "expo-secure-store": "*",
     "expo-linear-gradient": "*",
-    "react-native-element-dropdown": "*"
+    "react-native-element-dropdown": "*",
+    "uuid": "*",
+    "yup": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && node tools/scripts/eas-build-pre-install.mjs . apps/customer-mobile && cp package-lock.json apps/customer-mobile",
