--- a/libs/business-layer/tsconfig.lib.json
+++ b/libs/business-layer/tsconfig.lib.json
@@ -11,7 +11,7 @@
   "exclude": [
     "jest.config.ts",
     "src/**/*.spec.{js,jsx,ts,tsx}",
-    "src/**/*.test.{js,jsx,ts,tsx}",
+    "src/**/*.test.{js,jsx,ts,tsx}"
   ],
   "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"]
 }
