ADD/Provide Date

--- a/apps/customer-mobile/package.json
+++ b/apps/customer-mobile/package.json
@@ -43,7 +43,8 @@
     "expo-secure-store": "*",
     "expo-linear-gradient": "*",
     "uuid": "*",
-    "yup": "*"
+    "yup": "*",
+    "@react-native-picker/picker": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && node tools/scripts/eas-build-pre-install.mjs . apps/customer-mobile && cp package-lock.json apps/customer-mobile",
