--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@microsoft/signalr": "^8.0.0",
     "@nrwl/next": "^18.0.4",
-    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
