--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-date-picker": "^4.4.0",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-progress": "^5.0.1",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.9.0",
