--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native": "^0.72.10",
     "react-native-date-picker": "^4.4.0",
     "react-native-element-dropdown": "^2.10.1",
+    "react-native-maps": "^1.11.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.9.0",
