--- a/apps/customer-mobile/package.json
+++ b/apps/customer-mobile/package.json
@@ -48,7 +48,8 @@
     "yup": "*",
     "@react-native-community/datetimepicker": "*",
     "react-native-maps": "*",
-    "react-native-config": "*"
+    "react-native-config": "*",
+    "react-native-animated-progress": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && node tools/scripts/eas-build-pre-install.mjs . apps/customer-mobile && cp package-lock.json apps/customer-mobile",
