--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-native": "^0.72.10",
+    "react-native-animated-progress": "^1.0.2",
     "react-native-date-picker": "^4.4.0",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-maps": "^1.11.3",
@@ -79,6 +80,7 @@
     "@types/lodash": "^4.14.202",
     "@types/node": "18.16.9",
     "@types/react": "^18.2.57",
+    "@types/react-native-animated-progress": "^1.0.4",
     "@types/socket.io-client": "^3.0.0",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
