--- a/apps/customer-mobile/package.json
+++ b/apps/customer-mobile/package.json
@@ -49,7 +49,8 @@
     "@react-native-community/datetimepicker": "*",
     "react-native-maps": "*",
     "react-native-config": "*",
-    "react-native-animated-progress": "*"
+    "react-native-animated-progress": "*",
+    "react-native-gesture-handler": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && node tools/scripts/eas-build-pre-install.mjs . apps/customer-mobile && cp package-lock.json apps/customer-mobile",
