--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-animated-progress": "^1.0.2",
     "react-native-date-picker": "^4.4.0",
     "react-native-element-dropdown": "^2.10.1",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-maps": "^1.11.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
