--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,10 +18,10 @@
       "@assets/*": ["libs/presentational/src/assets/*"],
       "@business-layer/*": ["libs/business-layer/src/*"],
       "@constants/*": ["libs/constants/*"],
-      "@utils/*": ["libs/utils/src/*"],
       "@present-native/*": ["libs/presentational/src/native/*"],
       "@presentational/*": ["libs/presentational/src/*"],
-      "@styles/*": ["libs/presentational/src/native/styles/*"]
+      "@styles/*": ["libs/presentational/src/native/styles/*"],
+      "@utils/*": ["libs/utils/src/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
