ADD/Feat Test Flow

--- a/apps/customer-mobile/tsconfig.app.json
+++ b/apps/customer-mobile/tsconfig.app.json
@@ -11,5 +11,11 @@
     "**/*.spec.tsx",
     "test-setup.ts"
   ],
-  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.js",
+    "**/*.jsx",
+    "../freelancer/src/app/stacks/flows/TestStack.tsx"
+  ]
 }
