ADD/Home header

--- a/libs/presentational/tsconfig.lib.json
+++ b/libs/presentational/tsconfig.lib.json
@@ -1,24 +1,24 @@
 {
-    "extends": "./tsconfig.json",
-    "compilerOptions": {
-      "outDir": "../../dist/out-tsc",
-      "types": ["node", "next"]
-    },
-    "files": [
-      "../../node_modules/@nx/react/typings/cssmodule.d.ts",
-      "../../node_modules/@nx/next/typings/image.d.ts"
-    ],
-    "exclude": [
-      "jest.config.ts",
-      "src/**/*.spec.{js,jsx,ts,tsx}",
-      "src/**/*.test.{js,jsx,ts,tsx}",
-      "node_modules"
-    ],
-    "include": [
-      "src/**/*.js",
-      "src/**/*.jsx",
-      "src/**/*.ts",
-      "src/**/*.tsx",
-    ]
-  }
-  
+  "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "outDir": "../../dist/out-tsc",
+    "types": ["node", "next"]
+  },
+  "files": [
+    "../../node_modules/@nx/react/typings/cssmodule.d.ts",
+    "../../node_modules/@nx/next/typings/image.d.ts"
+  ],
+  "exclude": [
+    "jest.config.ts",
+    "src/**/*.spec.{js,jsx,ts,tsx}",
+    "src/**/*.test.{js,jsx,ts,tsx}",
+    "node_modules"
+  ],
+  "include": [
+    "src/**/*.js",
+    "src/**/*.jsx",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "index.d.ts"
+  ]
+}
