--- a/libs/utils/tsconfig.lib.json
+++ b/libs/utils/tsconfig.lib.json
@@ -2,12 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "types": ["node", "next"]
+    "types": ["node"]
   },
-  "files": [
-    "../../node_modules/@nx/react/typings/cssmodule.d.ts",
-    "../../node_modules/@nx/next/typings/image.d.ts"
-  ],
+  "files": ["../../node_modules/@nx/react/typings/cssmodule.d.ts"],
   "exclude": [
     "jest.config.ts",
     "src/**/*.spec.{js,jsx,ts,tsx}",
