--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,5 +24,6 @@
       "@utils/*": ["libs/utils/src/*"]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": ["node_modules", "tmp"],
+  "include": ["index.d.ts"]
 }
