--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-maps": "^1.11.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "^13.9.0",
     "react-native-svg-transformer": "1.0.0",
     "react-native-web": "~0.19.9",
