--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "react-native-maps": "^1.11.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-sound": "^0.11.2",
     "react-native-svg": "^13.9.0",
     "react-native-svg-transformer": "1.0.0",
     "react-native-web": "~0.19.9",
@@ -55,7 +54,8 @@
     "uuid": "^9.0.1",
     "ws": "^8.16.0",
     "yup": "^1.3.3",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "expo-av": "~13.4.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.9",
