ADD/ Incoming Order Detail screen

--- a/apps/freelancer/package.json
+++ b/apps/freelancer/package.json
@@ -40,7 +40,8 @@
     "lodash": "*",
     "@react-navigation/bottom-tabs": "*",
     "@react-navigation/native-stack": "*",
-    "react-native-sound": "*"
+    "react-native-sound": "*",
+    "expo-av": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && node tools/scripts/eas-build-pre-install.mjs . apps/freelancer && cp package-lock.json apps/freelancer",
