--- a/apps/customer-mobile/package.json
+++ b/apps/customer-mobile/package.json
@@ -50,7 +50,9 @@
     "react-native-maps": "*",
     "react-native-config": "*",
     "react-native-animated-progress": "*",
-    "react-native-gesture-handler": "*"
+    "react-native-gesture-handler": "*",
+    "expo-av": "*",
+    "react-native-url-polyfill": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && node tools/scripts/eas-build-pre-install.mjs . apps/customer-mobile && cp package-lock.json apps/customer-mobile",
