--- a/apps/freelancer/package.json
+++ b/apps/freelancer/package.json
@@ -41,7 +41,8 @@
     "@react-navigation/bottom-tabs": "*",
     "@react-navigation/native-stack": "*",
     "react-native-sound": "*",
-    "expo-av": "*"
+    "expo-av": "*",
+    "react-native-url-polyfill": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && node tools/scripts/eas-build-pre-install.mjs . apps/freelancer && cp package-lock.json apps/freelancer",
