--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "crypto-js": "^4.2.0",
     "encoding": "^0.1.13",
     "expo": "49.0.16",
+    "expo-av": "~13.4.1",
     "expo-linear-gradient": "~12.3.0",
     "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
@@ -46,6 +47,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.9.0",
     "react-native-svg-transformer": "1.0.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.9",
     "sass-loader": "^14.1.0",
     "socket.io-client": "^4.7.3",
@@ -54,8 +56,7 @@
     "uuid": "^9.0.1",
     "ws": "^8.16.0",
     "yup": "^1.3.3",
-    "zod": "^3.22.4",
-    "expo-av": "~13.4.1"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.9",
